# tsp-cuda

./: .gitignore  CMakeLists.txt  LICENSE  flake.nix
data/: 10_vertices.json  11_vertices.json  12_vertices.json  13_vertices.json  14_vertices.json  15_vertices.json  7_vertices.json  8_vertices.json  9_vertices.json  example.json
src/: backtracking.cc  backtracking.hpp  bruteforce.cc  bruteforce.hpp  bruteforce_cuda.cu  bruteforce_cuda.hpp  bruteforce_omp.cc  bruteforce_omp.hpp  graph.cc  graph.hpp  greedy.cc  greedy.hpp  main.cc
